--- a/boss level project part 1/style.css
+++ b/boss level project part 1/style.css
@@ -117,7 +117,12 @@ footer h2{
         font-size: 1.5rem;
         cursor: pointer;
     }
-
+    .navbar{
+        display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin: 80px;
+    }
     nav ul{
 
         position: fixed;
@@ -129,7 +134,11 @@ footer h2{
         transition: all .5s ease;
         max-height: 0;
         transform: translateX(-100%);
+        height: 100vh;
     
+    }
+    nav ul li a{
+        font-size: 1.5rem;
     }
     nav ul.active{
         max-height: 100%;
